# chie

./: README.md  backend.code-workspace  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/chie/: config.py  logger.py  main.py
backend/chie/middleware/auth/: auth_bearer.py  jwt_token_handler.py
backend/chie/migrations/: env.py
backend/chie/migrations/versions/: c4df50718404_add_mind_domain.py
backend/chie/mind/: utils.py
backend/chie/mind/adapters/: openai_llm.py
backend/chie/mind/controllers/: mind_routes.py
backend/chie/mind/domain/entities/: knowlet.py
backend/chie/mind/domain/ports/: llm.py
backend/chie/mind/domain/services/: mind_service.py
backend/chie/models/: db.py  mind.py
backend/chie/modules/mind/adapters/: langchain_runnable.py  openai_llm.py  supabase_mind_repository.py
backend/chie/modules/mind/controllers/: mind_routes.py
backend/chie/modules/mind/domain/entities/: knowlet.py  question.py
backend/chie/modules/mind/domain/ports/: llm_runnable.py  mind_repository.py
backend/chie/modules/mind/domain/services/: mind_rag_service.py  mind_service.py  templates.py
backend/chie/modules/mind/dto/: input.py  question.py  question_dto.py
backend/chie/modules/user/controllers/: user_routes.py
backend/chie/modules/user/dto/: inputs.py
backend/chie/modules/user/entity/: user_identity.py
backend/chie/settings/: supabase.py
ingestion/: README.md  pyproject.toml
ingestion/notebooks/: explore-riksdagen-api.ipynb
ingestion/notebooks/models/: retrieval.py  riksdagen.py
(+45 files in other folders)
